src/styles/login/index.styl
.login
  .login-container
    box-sizing border-box
    color $dark-gray

    &.left
      width 55%
      float left
      padding-left 150px

    &.right
      width 45%
      float right
      padding 65px 150px 70px 0

      div
        margin-top 40px
      div:first-child
        margin-top 0




  form
    max-width 520px
    margin 0 auto

  .subtle
    text-align center

